setup websocket
