# backend-go/docs/swagger.json
@@ -391,6 +391,11 @@
         },
         "/users": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Mengambil daftar semua user (tanpa detail)",
                 "consumes": [
                     "application/json"
